<resources>
    <string name="app_name">Lothone</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Label -->
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_add">Add</string>
    <string name="label_edit">Edit</string>
    <string name="label_update">Update</string>
    <string name="label_na">NA</string>
    <string name="label_work_in_progress">Work In Progress ...</string>

    <!-- Welcome -->
    <string name="welcome_text">Lo Thone</string>
    <string name="welcome_description">Application for Myanmar Citizen!</string>
    <string name="title_activity_home">Lo Thone</string>
    <string name="not_get_required_permission">Application did not get required permission to continue ...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Dashboard -->
    <string name="emergency">Emergency</string>
    <string name="police_station">Police</string>
    <string name="fire_brigade">Fire</string>
    <string name="ambulance">Ambulance</string>
    <string name="useful_information">Useful Information</string>
    <string name="ministry">Ministry</string>
    <string name="area_code">Area Code</string>
    <string name="zip_code">Zip Code</string>

    <!-- Personal Info -->
    <string name="personal_info">Personal Info</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="blood_type">Blood Type</string>
    <string name="address">Address</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="emergency_contact_one">Emergency Contact One</string>
    <string name="emergency_contact_two">Emergency Contact Two</string>
    <string name="emergency_contact_three">Emergency Contact Three</string>
    <string name="emergency_message_one">Someone is trying to hurt me!</string>
    <string name="emergency_message_two">Someone is tracking me.</string>
    <string name="emergency_message_three">Hay, I need help. Please call me back.</string>
    <string name="fake_name">Daw Hnin Si</string>
    <string name="fake_address">No.404, Apache Road, Linux Country.</string>
    <string name="fake_ph_number">09 999999999</string>

    <!-- About Us -->
    <string name="crafted_with_love">Crafted with love by Zaw Myo Htet!</string>
    <string name="about_us_text_one">This project is my side project that I used to spend my leisure time with. If it can help someone in some way, it will make me happy.</string>
    <string name="about_us_text_two">Feedback and suggestions are welcome!</string>
    <string name="about_us_text_three">Thanks!</string>

    <!-- Credit -->
    <string name="lo_tone_use">This application uses following third party android libraries.</string>
    <string name="resource_link">Resource Credit</string>
    <string name="artwork_credit">Artwork Credit</string>

    <!-- Drawer Menu -->
    <string name="home">Home</string>
    <string name="emergency_info">Emergency Info</string>
    <string name="how_to">How to</string>
    <string name="extra">Extra</string>
    <string name="credit">Credit</string>
    <string name="share">Share</string>
    <string name="about">What is this?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_direct_call_title">Make Direct Call</string>
    <string name="pref_direct_call_description">Make a direct call when tap every call action.</string>
    <string name="pref_assign_emergency_call_button">Assign Emergency Button</string>
    <string-array name="pref_emergency_call_button_title">
        <item>Call to 199</item>
        <item>Call to 911</item>
        <item>Call to 101</item>
    </string-array>
    <string-array name="pref_emergency_call_button_value">
        <item>199</item>
        <item>911</item>
        <item>101</item>
    </string-array>

    <!-- Emergency Settings -->
    <string name="pref_emergency">Emergency Setting</string>
    <string name="pref_listen_state">Enter Emergency State</string>
    <string-array name="pref_listen_state_title">
        <item>When screen off</item>
        <item>When Screen On</item>
        <item>On Both</item>
    </string-array>
    <string-array name="pref_listen_state_value">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_start_action">Active Emergency State After</string>
    <string-array name="pref_start_action_title">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="pref_start_action_value">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string name="pref_emergency_state_duration">Active Emergency State For</string>
    <string-array name="pref_emergency_state_duration_title">
        <item>10s</item>
        <item>15s</item>
        <item>20s</item>
    </string-array>
    <string-array name="pref_emergency_state_duration_value">
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
    </string-array>


    <!-- Default Pref -->
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
