<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/emergency_info" />
        <item
            android:id="@+id/nav_how_to"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/how_to" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="@string/extra">
        <menu>
            <item
                android:id="@+id/nav_credit"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/credit" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_sentiment_satisfied_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
