<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_personal_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zawmyohtet.lothone.PersonalInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        tools:ignore="ScrollViewSize"
        android:orientation="vertical">

        <TextView
            style="@style/PersonalInfoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            style="@style/PersonalInfoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fake_name" />

        <TextView
            style="@style/PersonalInfoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address" />

        <EditText
            style="@style/PersonalInfoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fake_address" />

        <TextView
            style="@style/PersonalInfoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergency_contact_one" />

        <EditText
            style="@style/PersonalInfoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/fake_ph_number" />

        <TextView
            style="@style/PersonalInfoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergency_contact_three" />

        <EditText
            style="@style/PersonalInfoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/fake_ph_number" />

        <TextView
            style="@style/PersonalInfoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergency_contact_three" />

        <EditText
            style="@style/PersonalInfoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/fake_ph_number" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accept"/>

    </LinearLayout>

</ScrollView>
