<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="direct_call"
        android:summary="@string/pref_direct_call_description"
        android:title="@string/pref_direct_call_title" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="199"
        android:entries="@array/pref_emergency_call_button_title"
        android:entryValues="@array/pref_emergency_call_button_value"
        android:key="emergency_call_button"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_assign_emergency_call_button" />

</PreferenceScreen>
