<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.zawmyohtet.lothone.AboutUsFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/label_na"
        android:textColor="@color/colorPrimaryText"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal"
        android:text="@string/crafted_with_love"
        android:textColor="@color/colorPrimaryText"
        android:textSize="14sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@color/colorDivider" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/object_separator_vertical"
        android:text="@string/about_us_text_one"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/object_separator_vertical"
        android:text="@string/about_us_text_one"
        android:textColor="@color/colorSecondaryText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/object_separator_vertical"
        android:text="@string/about_us_text_three"
        android:textColor="@color/colorPrimaryText" />


</LinearLayout>
