<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_listen_state_title"
        android:entryValues="@array/pref_listen_state_value"
        android:key="listen_state"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_listen_state" />

    <ListPreference
        android:defaultValue="5"
        android:entries="@array/pref_start_action_title"
        android:entryValues="@array/pref_start_action_value"
        android:key="start_action"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_start_action" />

    <ListPreference
        android:defaultValue="10s"
        android:entries="@array/pref_emergency_state_duration_title"
        android:entryValues="@array/pref_emergency_state_duration_value"
        android:key="listen_duration"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_emergency_state_duration" />

</PreferenceScreen>