<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:orientation="vertical"
    tools:context="com.zawmyohtet.lothone.HomeFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_head_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_accept"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accept" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cast_tracks_chooser_dialog_cancel" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txv_emergency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/object_separator_vertical"
                android:text="@string/emergency" />

            <LinearLayout
                android:id="@+id/ll_row_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txv_emergency"
                android:layout_marginBottom="@dimen/object_separator_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_police"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/police_station"
                    android:theme="@style/AppTheme.DashboardButton" />

                <Button
                    android:id="@+id/btn_fire_brigade"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/fire_brigade"
                    android:theme="@style/AppTheme.DashboardButton" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_row_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_row_one"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ambulance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/ambulance"
                    android:theme="@style/AppTheme.DashboardButton" />

                <Button
                    android:id="@+id/btn_dummy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/ambulance"
                    android:theme="@style/AppTheme.DashboardButton"
                    android:visibility="invisible" />

            </LinearLayout>

            <TextView
                android:id="@+id/txv_useful_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_row_two"
                android:layout_marginBottom="@dimen/object_separator_vertical"
                android:text="@string/useful_information" />

            <LinearLayout
                android:id="@+id/ll_row_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txv_useful_info"
                android:layout_marginBottom="@dimen/object_separator_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_zip_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/zip_code"
                    android:theme="@style/AppTheme.DashboardButton" />

                <Button
                    android:id="@+id/btn_area_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/area_code"
                    android:theme="@style/AppTheme.DashboardButton" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_row_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_row_three"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ministry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/ministry"
                    android:theme="@style/AppTheme.DashboardButton" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/ambulance"
                    android:theme="@style/AppTheme.DashboardButton"
                    android:visibility="invisible" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</LinearLayout>
