<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:orientation="vertical"
    tools:context="com.zawmyohtet.lothone.CreditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/CreditTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lo_tone_use" />

        <TextView
            style="@style/CreditTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OkHTTP" />

        <TextView
            style="@style/CreditTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Butterknife" />

        <TextView
            style="@style/CreditTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AVLoadingIndicatorView" />

        <TextView
            style="@style/CreditTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="nineoldandroids" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorDivider" />

        <TextView
            style="@style/CreditTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artwork_credit" />

        <TextView
            style="@style/CreditTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_na" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/colorDivider" />

        <TextView
            style="@style/CreditTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resource_link" />

        <TextView
            style="@style/CreditTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_na" />

    </LinearLayout>

</ScrollView>
