<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:paddingLeft="@dimen/object_separator_horizontal"
        android:paddingRight="@dimen/object_separator_horizontal">

        <TextView
            android:id="@+id/txv_emergency_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emergency_contact"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/txv_emergency_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txv_emergency_name"
            android:text="@string/fake_ph_number" />

        <TextView
            android:id="@+id/txv_emergency_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txv_emergency_number"
            android:text="@string/fake_address" />

    </RelativeLayout>

    <ImageButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/iv_call"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:contentDescription="@string/accept"
        android:paddingLeft="@dimen/object_separator_horizontal"
        android:paddingRight="@dimen/object_separator_horizontal"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_call_black_24dp" />

</LinearLayout>